--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Add permission
-      run: chmod +x gradlew
+      run: chmod +x ./server/EverybodyChachapark/gradlew
       
       # Gradle 빌드
     - name: Build with Gradle
